objects/Touchplan_Section_Campaign_Automation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Touchplan Section Campaign Automations</relationshipLabel>
        <relationshipName>Touchplan_Section_Campaign_Automations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specified_Trigger_Date__c</fullName>
        <label>Specified Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specified_Triggered_Date_TIme__c</fullName>
        <label>Specified Triggered Date TIme</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Touchplan_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Touchplan Section</label>
        <referenceTo>Touchplan_Section__c</referenceTo>
        <relationshipLabel>Touchplan Section Campaign Automations</relationshipLabel>
        <relationshipName>Touchplan_Section_Campaign_Automations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trigger_Automation_Event__c</fullName>
        <label>Trigger Automation Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Case Create</fullName>
                </value>
                <value>
                    <fullName>On Days Live: 40</fullName>
                </value>
                <value>
                    <fullName>On Days Live: 70</fullName>
                </value>
                <value>
                    <fullName>On Case Complete</fullName>
                </value>
                <value>
                    <fullName>Scheduled Call Reminder in Hours: 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Touchplan Section Campaign Automation</label>
    <nameField>
        <label>Marketo Campaign Automation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Touchplan Section Campaign Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>